force-app/main/default/objects/Vendor_Callout_Log__c/Vendor_Callout_Log__c.object-meta.xml
<CustomObject>
    <description>Logs vendor API callout details</description>
    <label>Vendor Callout Log</label>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>VL-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Vendor Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>