force-app/main/default/objects/Vendor_Callout_Log__c/fields/Callout_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Callout_DateTime__c</fullName>
    <description>Date and time of the API callout</description>
    <label>Callout DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>