force-app/main/default/objects/Vendor_Callout_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Related Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Callout Logs</relationshipLabel>
    <relationshipName>Callout_Logs</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>