force-app/main/default/objects/Vendor_Callout_Log__c/fields/Is_Successful__c.field-meta.xml
<CustomField>
    <fullName>Is_Successful__c</fullName>
    <description>Indicates if the API callout was successful</description>
    <defaultValue>false</defaultValue>
    <label>Is Successful</label>
    <type>Checkbox</type>
</CustomField>