force-app/main/default/objects/Vendor_Callout_Log__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Related Order created from the API response</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Callout Logs</relationshipLabel>
    <relationshipName>Callout_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>